<resources>
    <string name="app_name">Desafio5Etapa</string>
    <string name="nome_app">UnaEstagios</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_remuneracao">Remuneração</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_tipo">Tipo</string>
    <string name="button_entrar">ENTRAR</string>
    <string name="button_editar">EDITAR</string>
    <string name="button_cancelar">CANCELAR</string>
    <string name="button_deletar">DELETAR CONTA</string>
    <string name="button_criar_conta">CRIAR CONTA</string>
    <string name="button_recuperar_senha">RECUPERAR SENHA</string>
    <string name="button_criar_vaga">CRIAR VAGA</string>
    <string name="button_editar_vaga">EDITAR VAGA</string>
    <string name="button_deletar_vaga">DELETAR VAGA</string>
    <string name="hint_buscar_nome">Buscar por nome</string>
    <string name="hint_confirmar_senha">Confirmar Senha*</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_adicionar">Adicionar</string>
    <string name="hint_titulo_vaga">Título</string>
    <string name="hint_desricao">Descrição</string>
    <string name="hint_data_inicio">Data Início</string>
    <string name="hint_data_fim">Data Fim</string>
    <string name="hint_area">Área</string>
    <string name="hint_localidade">Localidade</string>
</resources>