<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="40dp"
    android:background="?attr/backgroundColor"
    tools:context=".activitys.CadastroActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cadastrar Vaga"
        android:textSize="48sp"
        android:layout_marginHorizontal="10dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        style="?attr/textInputOutlinedStyle"
        android:layout_height="wrap_content"
        android:hint="@string/hint_titulo_vaga"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        style="?attr/textInputOutlinedStyle"
        android:layout_height="wrap_content"
        android:hint="@string/hint_desricao"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/titulo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLength="250"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/textInputOutlinedStyle"
        android:hint="@string/hint_area"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/descricao">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/localidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/textInputOutlinedStyle"
        android:hint="@string/hint_localidade"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/area">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dataInicio"
        android:layout_width="match_parent"
        style="?attr/textInputOutlinedStyle"
        android:layout_height="wrap_content"
        android:hint="@string/hint_data_inicio"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/localidade">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmar_senha"
        android:layout_width="match_parent"
        style="?attr/textInputOutlinedStyle"
        android:layout_height="wrap_content"
        android:hint="@string/hint_data_fim"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/dataInicio">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/textInputOutlinedStyle"
        android:hint="@string/hint_telefone"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/confirmar_senha">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/textInputOutlinedStyle"
        android:hint="@string/hint_localidade"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/telefone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/criarButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginVertical="48dp"
        android:text="@string/button_criar_conta"
        android:textSize="16dp"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnPrimary"
        />

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/cancelarButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/criarButtonId"
        android:text="@string/button_cancelar"
        android:textSize="16dp"
        android:textColor="?attr/colorSecondary"
        />

</androidx.constraintlayout.widget.ConstraintLayout>