<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="40dp"
    android:background="?attr/backgroundColor"
    tools:context=".activitys.CadastroActivity">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Criar Conta"
        android:textSize="48sp"
        android:layout_marginHorizontal="10dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nome"
        android:layout_width="match_parent"
        style="?attr/textInputOutlinedStyle"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nomeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        style="?attr/textInputOutlinedStyle"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/senha"
        android:layout_width="match_parent"
        style="?attr/textInputOutlinedStyle"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:hint="@string/hint_senha"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/senhaValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmar_senha"
        android:layout_width="match_parent"
        style="?attr/textInputOutlinedStyle"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:hint="@string/hint_confirmar_senha"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/senha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmar_senhaValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/tipo_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/confirmar_senha"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tipo de usuário"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="4dp"
            />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@id/telefone"
            app:singleSelection="true"
            >
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/anunciante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Anunciante"
                />
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/candidato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Candidato"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/criarButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipo_usuario"
        android:layout_marginVertical="48dp"
        android:text="@string/button_criar_conta"
        android:textSize="16dp"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnPrimary"
        />

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/cancelarButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/criarButtonId"
        android:text="@string/button_cancelar"
        android:textSize="16dp"
        android:textColor="?attr/colorSecondary"
        />



</androidx.constraintlayout.widget.ConstraintLayout>